--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
       "psr-4": {
-        "Ford\\Escape\\": "src/Escape",
+        "Ydtask\\": "src/Ydtask",
         "Ford\\Fiesta\\": "src/Fiesta"
       }
     }
