修改任务显示 根据执行时间显示不同颜色

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     },
     "autoload": {
       "psr-4": {
-        "Ydtask\\": "src/Ydtask",
-        "Ford\\Fiesta\\": "src/Fiesta"
+        "Ydtask\\": "src/Ydtask"
       }
     }
 }
